# InkFlow

./: .gitignore  .gitmodules  .swiftlint.yml  .taplo.toml  AGENTS.md  Cargo.toml  Makefile.toml  README.md  STYLE_RUST.md
.github/: dependabot.yml
.github/workflows/: language.yml  release.yml  swift.yml
apps/macos/InkFlow/InkFlow/: ActivationOrbView.swift  AppConfig.swift  AppearanceSettings.swift  AudioCapture.swift  ContentView.swift  DictationHotkeyController.swift  InkFlow.entitlements  InkFlowApp.swift  InkFlowBridge.h  InkFlowClient.swift  InkFlowViewModel.swift  PanelController.swift  PanelHostViewController.swift  ParticleFieldView.swift  SettingsView.swift  UIConstants.swift  WaveformView.swift
apps/macos/InkFlow/InkFlow.xcodeproj/: project.pbxproj
apps/macos/InkFlow/InkFlow/UI/Panel/: PanelBackgroundView.swift  PanelExpandedView.swift  PanelHeaderView.swift  PanelHostViewController.swift  PanelModeTabsView.swift  PanelRootView.swift  PanelSettingsSheetView.swift
apps/macos/InkFlow/InkFlow/UI/Panel/Expanded/: PanelExpandedView.swift  PanelModeTabsView.swift  PanelSettingsAccessoryButton.swift
apps/macos/InkFlow/InkFlow/UI/Panel/Header/: PanelHeaderExpandButton.swift  PanelHeaderStatusView.swift  PanelHeaderTranscriptView.swift  PanelHeaderView.swift
apps/macos/InkFlow/InkFlow/UI/Panel/Host/: PanelHostViewController.swift
apps/macos/InkFlow/InkFlow/UI/Panel/Orb/: ActivationOrbSupport.swift  ActivationOrbView.swift
apps/macos/InkFlow/InkFlow/UI/Panel/Root/: PanelRootView.swift
apps/macos/InkFlow/InkFlow/UI/Panel/Waveform/: WaveformView.swift
apps/macos/InkFlow/InkFlow/UI/Settings/: SettingsAppearanceSectionView.swift  SettingsMicrophoneSectionView.swift  SettingsRootView.swift  SettingsShortcutsSectionView.swift
apps/macos/InkFlow/InkFlow/UI/Settings/Appearance/: AppearanceAccentGroup.swift  AppearanceDebugGroup.swift  AppearanceThemeGroup.swift  AppearanceWindowGlassGroup.swift  SettingsAppearanceSectionView.swift
apps/macos/InkFlow/InkFlow/UI/Settings/Microphone/: AudioInputDevice.swift  MicrophoneInputDeviceGroup.swift  (+4 more)
apps/macos/InkFlow/InkFlow/UI/Shared/: AppearanceReader.swift  SettingsGroupView.swift  SettingsLevelMeterView.swift  SettingsShortcutRow.swift
apps/macos/InkFlow/InkFlow/UI/Styles/: PanelStyles.swift  SettingsStyles.swift
crates/inkflow-core/: Cargo.toml
crates/inkflow-core/src/: engine.rs  lib.rs  settings.rs
crates/inkflow-core/src/domain/: mod.rs  transcript.rs
crates/inkflow-core/src/engine/: pipeline.rs  state.rs  worker.rs
crates/inkflow-core/src/stt/: mod.rs  whisper.rs
crates/inkflow-core/tests/: stt_smoke.rs
crates/inkflow-ffi/: Cargo.toml
crates/inkflow-ffi/include/: inkflow.h
crates/inkflow-ffi/src/: lib.rs
crates/sherpa-onnx-sys/: build.rs
crates/sherpa-onnx-sys/src/: lib.rs
crates/sherpa-onnx/src/: lib.rs
docs/: governance.md  index.md
docs/guide/: index.md
docs/guide/development/: dependency_upgrade_workflow.md  logging_guidelines.md  setup_and_configuration.md  stt_dictation_pipeline_impl_notes.md  submodule_updates.md  ui_floating_panel_notes.md
docs/guide/development/languages/: rust.md
docs/guide/testing/: stt_comparison_harness.md  stt_dictation_pipeline_debugging.md  stt_dictation_trace_regressions.md
docs/plans/: 2026-01-17-settings-panel-design.md  2026-01-18-stt-backend-architecture-implementation-plan.md  2026-01-18-ui-refactor-implementation.md  2026-01-18_stt-backend-architecture-implementation-plan.md  2026-01-18_stt-backend-optimizations.md  2026-01-18_ui-refactor-design.md  2026-01-23-stt-orchestrator-refactor.md  2026-01-23_stt-orchestrator-refactor.md  2026-01-24-logging-guidelines-and-retention.md  2026-02-04-forced-finalize-design.md  2026-02-04-forced-finalize-implementation.md
docs/spec/: architecture.md  architecture_decisions.md  architecture_upgrade_plan.md  backend_ui_contract.md  index.md  repository_layout.md  setup_and_configuration.md  speech_to_text.md  stt_dictation_pipeline.md  stt_dictation_pipeline_debugging.md  stt_dictation_pipeline_impl_notes.md  stt_dictation_pipeline_spec.md  stt_dictation_trace_regressions.md  stt_twopass_sliding_window.md  work_plan.md
docs/spec/core/: speech_to_text.md  stt_dictation_pipeline.md  stt_orchestrator_architecture.md
docs/spec/ui/: app_experience.md  backend_ui_contract.md
research/sherpa_onnx_demo/: README.md  pyproject.toml
research/sherpa_onnx_demo/sherpa_onnx_demo/: cli.py
research/stt_compare/: Cargo.toml  build.rs  manifest.toml
research/stt_compare/src/: accuracy.rs  audio.rs  cli.rs  config.rs  main.rs  mic.rs  mic_capture.rs  references.rs  sherpa.rs  twopass.rs  util.rs  whisper.rs  whisper_window.rs
script/: setup_macos.sh  stt_trace_summary.py
scripts/: run-debug.sh  run.sh  setup_macos.sh  stt_trace_summary.py
spec/: 00_index.md  10_architecture_decisions.md  20_repository_layout.md  50_speech_to_text.md  51_stt_twopass_sliding_window.md  52_stt_dictation_pipeline_spec.md  53_stt_dictation_pipeline_impl_notes.md  54_stt_dictation_pipeline_debugging.md  55_stt_dictation_trace_regressions.md  70_roadmap.md  80_work_plan.md  81_architecture_upgrade_plan.md  RULES.md
spec/archive/: file_by_file_implementation_checklist.md
spec/context/: 00_2025-12-15_to_2025-12-21_digest.md
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: app.toml
src-tauri/src/: adapters.rs  app_state.rs  application.rs  audio.rs  commands.rs  domain.rs  engine.rs  error.rs  events.rs  lib.rs  llm.rs  main.rs  overlay.rs  pipeline.rs  platform.rs  ports.rs  session.rs  settings.rs  stt.rs  stt_trace.rs
src-tauri/src/adapters/: platform.rs  ui.rs
src-tauri/src/application/: session_actor.rs  session_service.rs
src-tauri/src/audio/: mic_stream.rs
src-tauri/src/domain/: transcript.rs
src-tauri/src/pipeline/: dictation.rs  types.rs
src-tauri/src/platform/: linux.rs  macos.rs  windows.rs
src-tauri/src/ports/: platform.rs  ui.rs
src-tauri/src/stt/: whisper.rs
ui/: deno.json  package.json
ui/src/: App.tsx  index.css
(+1 files in other folders)
