[workspace]
members = [
	"crates/inkflow-core",
	"crates/inkflow-ffi",
	"crates/sherpa-onnx",
	"crates/sherpa-onnx-sys",
	"research/stt_compare",
]
resolver = "3"

[workspace.package]
authors     = ["Xavier Lau <x@acg.box>"]
description = "InkFlow is a macOS-first, local dictation overlay (SuperWhisper-like) built with SwiftUI and Rust via FFI."
edition     = "2024"
homepage    = "https://github.com/hack-ink/InkFlow"
license     = "GPL-3.0"
readme      = "README.md"
repository  = "https://github.com/hack-ink/InkFlow"
version     = "0.1.0"

[workspace.dependencies]
# crates.io
anyhow                       = { version = "1.0" }
bindgen                      = { version = "0.72", default-features = false, features = ["runtime"] }
clap                         = { version = "4.5", features = ["derive"] }
color-eyre                   = { version = "0.6" }
futures-util                 = { version = "0.3" }
hound                        = { version = "3.5" }
libloading                   = { version = "0.9" }
log                          = { version = "0.4" }
objc2                        = { version = "0.6" }
objc2-app-kit                = { version = "0.3", default-features = false }
reqwest                      = { version = "0.12", features = ["json"] }
rig                          = { package = "rig-core", version = "0.27" }
serde                        = { version = "1.0", features = ["derive"] }
serde_json                   = { version = "1.0" }
tokio                        = { version = "1.48", features = ["sync", "time"] }
tokio-util                   = { version = "0.7" }
toml                         = { version = "0.9" }
tracing-subscriber           = { version = "0.3", features = ["env-filter"] }
vergen-gitcl                 = { version = "1.0", features = ["cargo"] }
whisper-rs                   = { version = "0.15" }
# self
sherpa-onnx     = { version = "0.1", path = "crates/sherpa-onnx" }
sherpa-onnx-sys = { version = "0.1", path = "crates/sherpa-onnx-sys" }

[profile.ci-dev]
incremental = false
inherits    = "dev"

[profile.ci-release]
inherits = "release"
lto      = true
