[workspace]
members = [
	"packages/inkflow-core",
	"packages/inkflow-ffi",
	"packages/sherpa-onnx",
	"packages/sherpa-onnx-sys",
	"research/stt_compare",
]
resolver = "3"

[workspace.package]
authors     = ["Xavier Lau <x@acg.box>"]
description = "InkFlow is a macOS-first, local dictation overlay (SuperWhisper-like) built with SwiftUI and Rust via FFI."
edition     = "2024"
homepage    = "https://github.com/hack-ink/InkFlow"
license     = "GPL-3.0"
readme      = "README.md"
repository  = "https://github.com/hack-ink/InkFlow"
version     = "0.1.0"

[workspace.dependencies]
# crates.io
bindgen            = { version = "0.72", default-features = false, features = ["runtime"] }
clap               = { version = "4.5", features = ["derive"] }
color-eyre         = { version = "0.6" }
directories        = { version = "6.0" }
hound              = { version = "3.5" }
libloading         = { version = "0.9" }
serde              = { version = "1.0", features = ["derive"] }
serde_json         = { version = "1.0" }
tokio              = { version = "1.48", features = ["sync", "time"] }
tokio-util         = { version = "0.7" }
toml               = { version = "0.9" }
tracing            = { version = "0.1" }
tracing-appender   = { version = "0.2" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
vergen-gitcl       = { version = "1.0", features = ["cargo"] }
whisper-rs         = { version = "0.15" }
# self
sherpa-onnx     = { version = "0.1", path = "packages/sherpa-onnx" }
sherpa-onnx-sys = { version = "0.1", path = "packages/sherpa-onnx-sys" }

[profile.ci-dev]
incremental = false
inherits    = "dev"

[profile.ci-release]
inherits = "release"
lto      = true
