[package]
authors.workspace     = true
default-run           = "inkflow"
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
license.workspace     = true
name                  = "inkflow"
repository.workspace  = true
version.workspace     = true

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
name       = "air_lib"

[build-dependencies]
# crates.io
tauri-build = { workspace = true }

[dependencies]
# crates.io
futures-util                 = { workspace = true }
log                          = { workspace = true }
reqwest                      = { workspace = true }
rig                          = { workspace = true }
serde                        = { workspace = true }
serde_json                   = { workspace = true }
hound                        = { workspace = true }
tauri                        = { workspace = true, features = ["macos-private-api"] }
tauri-plugin-liquid-glass    = "0.1"
tauri-plugin-global-shortcut = { workspace = true }
tauri-plugin-log             = { workspace = true }
tokio                        = { workspace = true }
tokio-util                   = { workspace = true }
# self
sherpa-onnx = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
# crates.io
objc2         = { workspace = true }
objc2-app-kit = { workspace = true, default-features = false, features = ["NSScrollView", "NSView", "NSWindow", "std"] }
whisper-rs    = { workspace = true, features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
whisper-rs = { workspace = true }
