[package]
authors.workspace     = true
build                 = "build.rs"
description.workspace = true
edition.workspace     = true
homepage.workspace    = true
license.workspace     = true
name                  = "stt-compare"
publish               = false
repository.workspace  = true
version.workspace     = true

[build-dependencies]
# crates.io
vergen-gitcl = { workspace = true }

[dependencies]
# crates.io
clap               = { workspace = true }
color-eyre         = { workspace = true }
cpal               = { workspace = true }
hound              = { workspace = true }
serde              = { workspace = true }
toml               = { version = "0.8" }
tracing-subscriber = { workspace = true }
# self
sherpa-onnx = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
# crates.io
whisper-rs = { workspace = true, features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
# crates.io
whisper-rs = { workspace = true }
